syntax = "proto3";

package grpc;

import "google/protobuf/empty.proto";


// Orchestrator orchestrates ChainManagers, by telling them what to monitor and receiving reports from them.
service Orchestrator {
    // RegisterChainManager is invoked by ChainManagers to register themselves with this Orchestrator.
    rpc RegisterChainManager (RegisterChainManagerRequest) returns (RegisterChainManagerResponse);

    // UnregisterChainManager is invoked by ChainManager to gracefully unregister themselves with this Orchestrator.
    // This usually happens when problems are noticed on its connector and ChainManager needs to terminate itself.
    rpc UnregsiterChainManager (UnregisterChainManagerRequest) returns (google.protobuf.Empty);

    // RenewLease renews the lease between a ChainManager and this Orchestrator.
    // Upon lease expiration, Orchestrator will consider the ChainManager dead and be free to accept new registrations.
    rpc RenewLease (RenewLeaseRequest) returns (Lease);

    // ReportBlockEvents reports a new block on the monitored chain, as well as all fired events from this block.
    // The request stream must begin with a valid Preflight, followed by a Block, followed by zero or more Events.
    rpc ReportBlockEvents (stream ReportBlockEventsRequest) returns (google.protobuf.Empty);
}

message RegisterChainManagerRequest {
    // ChainManagerId identifies the instance of the requesting ChainManager.
    InstanceId chain_manager_id = 1;

    // ChainId identifies the chain being managed.
    string chain_id = 2;

    // ListenPort allows Orchestrator to reach out to this ChainManager.
    int32 listen_port = 3;

    // SessionId should be included in all outbound communications from Orchestrator to ChainManager as a validity proof.
    bytes session_id = 4;
}

message RegisterChainManagerResponse {
    // Lease indicates the validity period allocated to the requesting ChainManager.
    Lease lease = 1;

    // ResumeAfter indicates the last processed block by Orchestrator.
    // If not nil, ChainManager is expected to start reporting from right after this block.
    // Otherwise, ChainManager can start reporting from the next new block.
    BlockSpec resume_after = 2;

    // Monitors contain all things to be monitored by the requesting ChainManager.
    MonitorSet monitors = 3;
}

message UnregisterChainManagerRequest {
    // ChainId identifies the chain being managed.
    string chain_id = 1;

    // Message indicates the reason of the unregistration.
    string message = 2;
}

// InstanceId identifies a specific instance of an entity.
message InstanceId {
    // Id is the entity id.
    bytes id = 1;

    // Instance is a monotonically increasing sequence number, namespaced by Id.
    uint32 instance = 2;
}

// BlockSpec is used to specify a block to be looked up.
// While Hash is the most accurate specification, when not available, Height can be used instead.
message BlockSpec {
    bytes hash = 1;
    BigInt height = 2;
}

message MonitorSet {
    // Monitors contain all things to be monitored by the requesting ChainManager.
    repeated Monitor monitors = 1;

    // Version is used for Orchestrator and ChainManager to agree on the set of monitors evaluated on each block.
    uint32 version = 2;
}

// Monitor contains a list of encoded workflow expressions and a triggering condition 
message Monitor {
    bytes id = 1;

    // evaluations is a list of encoded workflow expressions, which will be evaluated if a monitor is triggered
    // the result will be passed back to flow manager as part of event. These expression results are intended for 
    // evaluating actions
    bytes monitor = 2;
}

message RenewLeaseRequest {
    // LeaseId must be the id of a still valid Lease.
    bytes lease_id = 1;
}

message Lease {
    // Id uniquely identifies this Lease.
    bytes id = 1;

    // RemainingSeconds indicates the length of the validity period in seconds.
    uint32 remaining_seconds = 2;
}

message ReportBlockEventsRequest {
    message Preflight {
        // LeaseId must be the id of a still valid Lease.
        bytes lease_id = 1;

        // MonitorSetVersion is the version of the MonitorSet this block was processed with.
        uint32 monitor_set_version = 2;
    }

    oneof msg_type {
        Preflight preflight = 1;
        Block block = 2;
        Event event = 3;
    }
}

// TODO - TBD
message Block {
    bytes hash = 1;
    bytes parent_hash = 2;
    BigInt height = 3;
}

message BigInt {
    // Bytes are interpreted as a big-endian unsigned integer.
    bytes bytes = 1;
    bool negative = 2;
}

// Event describes a fired Monitor.
message Event {
    // MonitorId identifies the Monitor being fired.
    bytes monitor_id = 1;

    // Context contains a list of evalutaion result of expressions in Monitor, the order of list is 
    // the same as the order of list in Monitor
    repeated bytes evaluations_results = 2;
}
